<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BE397"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addprod"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtTxtProduct"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/prodname"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtTxtPrice"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rdProdType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/rdFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rdDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="@string/drink"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rdOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/Add"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#918740"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/View"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="#984949"
        android:text="@string/allprod"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFoodView"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="#452FA8"
        android:text="@string/filfood"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/DrinkView"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="#AE4141"
        android:text="@string/fildrink"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnOtherView"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/filother"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>