<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94DD6AE1"
    android:orientation="vertical"
    tools:context=".Edit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editdel"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/record_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:text="@string/recid"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/id_pname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/prodname"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/id_price"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rdProdType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/id_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="Food"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/id_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="Drink"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/id_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text="Others"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/id_edit"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:backgroundTint="#FF5722"
        android:text="@string/edit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/id_delete"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="#8F2424"
        android:text="@string/delete"
        android:textSize="20sp" />
</LinearLayout>